--- a/src/main/resources/templates/gallery-page.html
+++ b/src/main/resources/templates/gallery-page.html
@@ -18,10 +18,12 @@
             <h1 class="page-header text-info">Photo Gallery</h1>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-                <img class="img-responsive" src="http://placehold.it/400x300" alt="" height="200" width="200" />
-            </a>
+        <div th:each="file : ${files}">
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a th:href="${file.href}">
+                    <img th:src="${file.href}" alt="" height="200" width="200" />
+                </a>
+            </div>
         </div>
 
         <div class="col-lg-12">
