--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<div class="container" th:fragment="footer">
-    <footer>
-        <div class="container navbar navbar-fixed-bottom">
+
+<footer th:fragment="footer">
+
+    <div class="row">
+        <div class="col-lg-12">
             <p class="text-muted">&copy; ave 2016</p>
         </div>
-    </footer>
-</div>
+    </div>
+
+</footer>
+
+<!-- jQuery -->
+<script src="../../static/js/jquery-1.7.2.js"></script>
+
 </body>
 </html>
