--- a/src/main/resources/templates/front-page.html
+++ b/src/main/resources/templates/front-page.html
@@ -10,29 +10,35 @@
 
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container text-center">
+<div class="container">
 
-    <form role="form" th:action="@{/photo/gallery}" method="post">
+    <div class="row">
 
-        <h1 class="page-header text-info">Type your pic folder</h1>
+        <form role="form" th:action="@{/photo/gallery}" method="post" class="text-center">
 
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-4">
-                <input type="text" class="form-control" id="path" name="path" placeholder="C:\photos\mypics" />
+            <h1 class="page-header text-info">Type your pic folder</h1>
+
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <input type="text" class="form-control" id="path" name="path" placeholder="C:\photos\mypics" />
+                </div>
             </div>
-        </div>
 
-        <h2 class="text-info">and create your gallery</h2>
+            <h2 class="text-info">and create your gallery</h2>
 
-        <div class="row">
-            <button class="btn btn-primary" type="submit">Create Gallery</button>
-        </div>
+            <div class="row">
+                <button class="btn btn-primary" type="submit">Create Gallery</button>
+            </div>
 
-    </form>
+        </form>
 
+    </div>
+    <!-- ./row-->
+    <hr />
+    <div th:replace="fragments/footer :: footer"></div>
+    <!-- ./footer-->
 </div>
-
-<div th:replace="fragments/footer :: footer"></div>
+<!-- ./container-->
 
 </body>
 </html>
