--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 
+<!--Footer-->
 <footer th:fragment="footer">
 
     <div class="row">
@@ -12,7 +13,6 @@
 
 </footer>
 
-<!-- jQuery -->
 <script src="../../static/js/jquery-1.7.2.js"></script>
 
 </body>
