--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 
+<!--Header-->
 <nav class="navbar navbar-fixed-top navbar-inverse"
      role="navigation" th:fragment="header">
 
@@ -17,9 +18,7 @@
                 <li><a th:href="@{/photo/gallery}">My Photos</a></li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container -->
 </nav>
 
 </body>
