--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Gallery</title>
+    <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
           href="../static/css/bootstrap.min.css" />
 </head>
-<body>
+<body th:style="${isDark} ? 'background-color:#282828' : 'background-color:#ffffff'">
 
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
+<div class="container" th:if="${front}">
+
+    <div class="row">
+
+        <form class="text-center" th:action="@{/photo}" method="post" role="form" >
+
+            <h1 class="page-header text-info">Type your pic folder</h1>
+
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <input type="text" class="form-control" id="path" name="path" placeholder="C:\photos\mypics" />
+                </div>
+            </div>
+
+            <h2 class="text-info">and create your gallery</h2>
+
+            <div class="row">
+                <button class="btn btn-primary" type="submit">Create Gallery</button>
+            </div>
+
+        </form>
+
+    </div>
+
+    <hr />
+    <div th:replace="fragments/footer :: footer"></div>
+
+</div>
+
+<div class="container" th:if="${gallery}">
 
     <div class="row">
 
@@ -33,11 +62,10 @@
 
     </div>
 
-    <!-- /.row-->
     <hr />
     <div th:replace="fragments/footer :: footer"></div>
-    <!-- ./footer-->
+
 </div>
-<!-- /.container -->
+
 </body>
 </html>
