--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,17 +3,13 @@
 <body>
 
 <!--Footer-->
-<footer th:fragment="footer">
+<footer class="text-center" th:fragment="footer">
 
     <div class="row">
-        <div class="col-lg-12">
-            <p class="text-muted">&copy; ave 2016</p>
-        </div>
+        <p class="text-muted col-lg">&copy; ave 2016</p>
     </div>
 
 </footer>
-
-<script src="../../static/js/jquery-1.7.2.js"></script>
 
 </body>
 </html>
