--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,8 +3,7 @@
 <body>
 
 <!--Header-->
-<nav class="navbar navbar-fixed-top navbar-inverse"
-     role="navigation" th:fragment="header">
+<nav class="navbar navbar-inverse" role="navigation" th:fragment="header">
 
     <div class="container">
         <div class="navbar-header">
