--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,81 +1,70 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Home</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <title>PhotoGallery</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
-          href="../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" th:href="@{/css/horizontal.css}"
-          href="../static/css/horizontal.css" />
+          href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" th:href="@{/css/style.css}"
+          href="/static/css/style.css" />
 </head>
+
 <body th:style="${isDark} ? 'background-color:#282828' : 'background-color:#ffffff'">
 
 <div th:replace="fragments/header :: header"></div>
 
 <div class="container" th:if="${home}">
 
-    <div class="row">
+    <div class="row text-center">
+        <h1 class="page-header text-info">Type your pic folder</h1>
 
-        <form class="text-center" th:action="@{/photo}" method="post" role="form" >
-
-            <h1 class="page-header text-info">Type your pic folder</h1>
+        <form th:action="@{/photo}" method="post" role="form" >
 
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-4">
-                    <input type="text" class="form-control" id="path" name="path" placeholder="C:\photos\mypics" />
+                    <input type="text" class="form-control" name="path" placeholder="C:\photos\mypics" />
                 </div>
             </div>
 
-            <h2 class="text-info">and create your gallery</h2>
+            <h2 class="text-info">And create your gallery</h2>
 
             <div class="row">
                 <button class="btn btn-primary" type="submit">Create Gallery</button>
             </div>
-
         </form>
-
     </div>
 
     <hr />
     <div th:replace="fragments/footer :: footer"></div>
-
 </div>
 
 <div class="container" th:if="${gallery}">
-
     <div class="row">
 
         <div class="col-lg-12">
             <h1 class="page-header text-info">Photo Gallery</h1>
         </div>
 
-        <div class="container cover-container">
-            <div>
-                <div class="cover-item" th:each="link : ${links}">
-                    <a th:href="${link.href}">
-                        <img th:unless="${isOriginal}"
-                             th:src="${link.href}"
-                             th:alt="${link.rel}"
-                             th:width="${width}"
-                             th:height="${height}" />
-
-                        <img th:if="${isOriginal}"
-                             th:src="${link.href}"
-                             th:alt="${link.rel}" />
-                    </a>
-                </div>
+        <div class="container">
+            <div class="text-center" th:if="${links.isEmpty()}">
+                <p class="account-p">No files found. Note: searching for files with '.png' extensions.</p>
+            </div>
+            <div class="row" th:class="${isOriginal} ? '' : 'col-lg-3'" th:each="link : ${links}">
+                <a th:href="${link.href}">
+                    <img th:unless="${isOriginal}" th:src="${link.href}" th:alt="${link.rel}" th:width="${width}" th:height="${height}" />
+                    <img th:if="${isOriginal}" th:src="${link.href}" th:alt="${link.rel}" />
+                </a>
             </div>
         </div>
 
         <div class="col-lg-12">
             <p class="text-info modal-footer" th:text="${msg}"></p>
         </div>
-
     </div>
 
     <hr />
     <div th:replace="fragments/footer :: footer"></div>
-
 </div>
 
 </body>
