--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,10 +4,8 @@
 <head>
     <title>Error</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
-          href="/static/css/bootstrap.min.css" />
-    <link rel="stylesheet" th:href="@{/css/style.css}"
-          href="/static/css/style.css" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 
 <body class="error-body">
