--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,8 @@
 <head>
     <title>PhotoGallery</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
-          href="/static/css/bootstrap.min.css" />
-    <link rel="stylesheet" th:href="@{/css/style.css}"
-          href="/static/css/style.css" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 
 <body th:style="${isDark} ? 'background-color:#282828' : 'background-color:#ffffff'">
@@ -59,7 +57,7 @@
         </div>
 
         <div class="col-lg-12">
-            <p class="text-info modal-footer" th:text="${msg}"></p>
+            <p class="text-info modal-footer" th:text="${links.size()}"> Images Uploaded</p>
         </div>
     </div>
 
