--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Error</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/dist/css/bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 
